backend-stag/be-ingress-stag.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-be-stag
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api-staging.cilist.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-be-cilist-stag
            port:
              number: 80
